[project]
name = "kabot"
version = "0.1.0"
description = "Telegram bot for Dujiao-Next shops"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
kabot = "kabot.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kabot*"]
